# otel-arrow

.github/workflows/: rust-ci.yml
docs/benchmarks/binary-size/: data.js
rust/otap-dataflow/: Cargo.toml
rust/otap-dataflow/crates/azure-monitor-uploader/: Cargo.toml
rust/otap-dataflow/crates/azure-monitor-uploader/src/: auth.rs  client.rs  config.rs  error.rs  gzip_batcher.rs  heartbeat.rs  lib.rs  transformer.rs
rust/otap-dataflow/crates/contrib-nodes/: Cargo.toml
rust/otap-dataflow/crates/contrib-nodes/src/exporters/azure_monitor_exporter/: error.rs  exporter.rs  heartbeat.rs  in_flight_exports.rs  mod.rs
rust/otap-dataflow/crates/contrib-nodes/src/exporters/geneva_exporter/: mod.rs
rust/otap-dataflow/crates/telemetry/src/: tracing_init.rs
