[package]
name = "azure-monitor-uploader"
description = "Core library for uploading telemetry data to Azure Monitor via DCR API"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
rust-version = "1.87.0"
publish = false

# Standalone dependencies — no workspace inheritance.
# Uses otap-df-pdata-views (zero-dependency trait crate) for the transformer
# data interface, preserving zero-copy performance from the exporter.
[dependencies]
azure_identity = { version = "0.33.0", default-features = false }
azure_core = { version = "0.33.0", default-features = false, features = ["reqwest"] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1"
futures = "0.3"
http = "1.4"
humantime-serde = "1.1"
itoa = "1"
otap-df-pdata-views = { path = "../pdata-views" }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
ryu = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt", "time", "net", "sync", "macros", "rt-multi-thread"] }
urlencoding = "2"

[dev-dependencies]
async-trait = "0.1"
azure_core = { version = "0.33.0", default-features = false }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "logs"] }
otap-df-pdata = { path = "../pdata" }
prost = "0.14"
serde_yaml = "0.9"
wiremock = "0.6"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
